<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayQuizActivity">

    <TextView
        android:id="@+id/questionsAttemptedID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/questionsAttemptedString"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/questionString"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/questionSectionID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150sp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="10sp"
        >

        <Button
            android:id="@+id/option01ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7.5sp"
            android:backgroundTint="@color/purple_500"
            android:padding="4dp"
            android:text="@string/option01String"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/option02ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7.5sp"
            android:backgroundTint="@color/purple_500"
            android:padding="4dp"
            android:text="@string/option02String"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/option03ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7.5sp"
            android:backgroundTint="@color/purple_500"
            android:padding="4dp"
            android:text="@string/option03String"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/option04ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7.5sp"
            android:backgroundTint="@color/purple_500"
            android:padding="4dp"
            android:text="@string/option04String"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/quizScoreID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text=""
            android:textSize="30sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/restartQuizButtonID"
                android:layout_width="150dp"
                android:layout_height="75sp"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:backgroundTint="@color/orange"
                android:text="@string/restartQuizString"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/endQuizButtonID"
                android:layout_width="150dp"
                android:layout_height="75sp"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:backgroundTint="@color/green"
                android:text="@string/endQuizString"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>